--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.21",
     "next": "15.5.0",
+    "nodemailer": "^7.0.6",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -18,6 +20,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
