--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "nodemailer": "^7.0.6",
     "postcss": "^8.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "resend": "^6.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
