--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.21",
+    "lucide-react": "^0.545.0",
     "next": "15.5.0",
     "nodemailer": "^7.0.6",
     "postcss": "^8.5.6",
